# Tranquillien-HCRP-Project

./: Makefile.in  aclocal.m4  config.h.in~  configure  configure.ac  end  mmaps.patch  quest.patch  vehicle.patch
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
dep/: Makefile.in
dep/ACE_wrappers/: Makefile.in  aclocal.m4  configure
dep/ACE_wrappers/ace/: Makefile.in
dep/ACE_wrappers/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
dep/include/: Makefile.in
dep/lib/: Makefile.in
dep/src/: Makefile.in
dep/src/g3dlite/: Makefile.in
dep/src/gsoap/: Makefile.in
dep/src/sockets/: Makefile.in
dep/src/zlib/: Makefile.in
dep/tbb/: Makefile.in
doc/: Makefile.in
sql/: Makefile.in
sql/tools/: Makefile.in
sql/updates/: Makefile.in
src/: Makefile.in
src/bindings/: Makefile.in
src/bindings/ScriptDev2/: Makefile.am  Makefile.in  ScriptMgr.cpp  ScriptMgr.h
src/bindings/ScriptDev2/scripts/custom/: scriptedAI.cpp  vstupAI.cpp
src/bindings/ScriptDev2/sql/: Makefile.in
src/bindings/ScriptDev2/sql/Updates/: Makefile.in
src/bindings/ScriptDev2/system/: ScriptLoader.cpp
src/bindings/universal/: ScriptMgr.cpp  ScriptMgr.h
src/bindings/universal/Scripts/: scriptedAI.cpp
src/framework/: Makefile.in
src/game/: Item.cpp  Makefile.in  ObjectMgr.cpp  ObjectMgr.h  Player.cpp  Player.h  QueryHandler.cpp  ScriptCalls.cpp  ScriptCalls.h  SpellAuras.cpp  World.cpp
src/mangosd/: Makefile.in
src/realmd/: Makefile.in
src/shared/: Makefile.in
src/shared/Auth/: Makefile.in
src/shared/Config/: Makefile.in
src/shared/Database/: Makefile.in
src/shared/vmap/: Makefile.in
src/tools/: Makefile.in
src/tools/genrevision/: Makefile.in
